# retrofit-java

./: .gitignore  AGENTS_BACKEND_EXPLORATION.md  AGENT_ARCHITECTURE_ANALYSIS.md  ANALYSIS_COMPLETION_REPORT.md  ARCHITECTURE_AND_OPTIONS.md  AST_TOOLS_QUICK_REFERENCE.md  CLAUDE.md  CLAW_ANALYSIS_AND_IMPROVEMENTS.md  CLAW_CODE_EXAMPLES.md  CLAW_DOCUMENTATION_INDEX.md  CLAW_EXTRACTION_SUMMARY.txt  CLAW_INSPIRED_SOLUTION_FOR_ELASTICSEARCH.md  CLAW_READY_TO_USE_CODE.md  COMPLETE_IMPLEMENTATION_SUMMARY.txt  ELASTICSEARCH_FAILURE_ANALYSIS_SUMMARY.md  ELASTICSEARCH_FAILURE_VISUAL_GUIDE.txt  ELASTICSEARCH_FIX_QUICK_REFERENCE.md  FINAL_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LINE_DRIFT_FIX_IMPLEMENTATION_COMPLETE.md  LINE_DRIFT_FIX_ROADMAP.md  NON_JAVA_HUNKS_IMPLEMENTATION.md  PIPELINE_EXECUTION_FLOW.md  TOOLS_AND_UTILITIES_ANALYSIS.md  docker-compose.yml  test_hunk.diff  test_reverse.diff
agents-backend/: .env.example  BIG_BANG_IMPLEMENTATION_PLAN.md  Dockerfile  context_analyzer_trace.md  debug_hunk_corruption.py  hunk_generator_trace.md  implementation_plan.json  main.py  pyproject.toml  reasoning_trace.md  requirements.txt  structural_locator_trace.md  validation_result.json  validation_trace.md
agents-backend/evaluate/: revisit.txt
agents-backend/solution/: failure-diagnosis.py  implementation-guide.md  implementation.md  planning-agent-integration.py  solution.md  type-v-rulebook.py  validation-agent-integration.py
agents-backend/src/: graph.py  main.py  run_validation_experiment.py  state.py
agents-backend/tests/: test_analysis_tools.py  test_context_analyzer.py  (+21 more)
(+1050 files in other folders)
